Adjusts spacing issue of name-title card, removes box-shadow

--- a/sass/components/_leadership-image.scss
+++ b/sass/components/_leadership-image.scss
@@ -1,6 +1,7 @@
 #leadership-image{
     display: inliine-block;
     width: 20rem;
+
     .profile-photo{
         height: 15rem;
         width: 13rem;
@@ -9,22 +10,30 @@
             max-width: 100%;
           }
     }
-    
+    .card {
+        border: none;
+        box-shadow: 0 0 0 0;
+    }
+
       .name-title {
+        position: relative;
+        bottom: 10px;
         float: right;  
-        max-height: 5rem;
-       
+        max-height: 5rem;      
         opacity: 0.5;
         width: 16rem;
 
+        
+
         .card-content {
+            
             margin: 0;
             padding: .5rem;
           }
           .leadership-name {
             font-family: "Heavy";
             font-size: 1.2rem;
-            color: black;
+            color: $black;
           }
           .leadership-title {
             font-family: "Book";
